err/django-photologue-praekelt.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_photologue_praekelt-2.10.3.egg-info'...
Listing './lib/python3.5/site-packages/photologue'...
Listing './lib/python3.5/site-packages/photologue/locale'...
Listing './lib/python3.5/site-packages/photologue/locale/pl'...
Listing './lib/python3.5/site-packages/photologue/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/photologue/management'...
Listing './lib/python3.5/site-packages/photologue/management/commands'...
Compiling './lib/python3.5/site-packages/photologue/management/commands/__init__.py'...
***   File "./lib/python3.5/site-packages/photologue/management/commands/__init__.py", line 11
    print 'Invalid input.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/photologue/management/commands/plcache.py'...
***   File "./lib/python3.5/site-packages/photologue/management/commands/plcache.py", line 35
    print 'Caching photos, this may take a while...'
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/photologue/management/commands/plflush.py'...
***   File "./lib/python3.5/site-packages/photologue/management/commands/plflush.py", line 29
    print 'Flushing cache...'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/photologue/models.py'...
***   File "./lib/python3.5/site-packages/photologue/models.py", line 480
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/photologue/res'...
Listing './lib/python3.5/site-packages/photologue/templates'...
Listing './lib/python3.5/site-packages/photologue/templates/photologue'...
Listing './lib/python3.5/site-packages/photologue/templates/photologue/tags'...
Listing './lib/python3.5/site-packages/photologue/templatetags'...
Listing './lib/python3.5/site-packages/photologue/utils'...
Compiling './lib/python3.5/site-packages/photologue/utils/EXIF.py'...
***   File "./lib/python3.5/site-packages/photologue/utils/EXIF.py", line 1182
    y = 0L
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
